@@ -20,7 +20,8 @@
 #
 ###################################################################
 
-get.adjacency <- function(graph, type="both") {
+get.adjacency <- function(graph, type="both", attr=NULL, names=TRUE,
+                          binary=FALSE) {
   if (!is.igraph(graph)) {
     stop("Not a graph object")
   }
@@ -28,8 +29,54 @@ get.adjacency <- function(graph, type="both") {
     type <- switch(type, "upper"=0, "lower"=1, "both"=2)
   }
   
-  .Call("R_igraph_get_adjacency", graph, as.numeric(type),
-        PACKAGE="igraph")
+  if (is.null(attr)) {    
+    res <- .Call("R_igraph_get_adjacency", graph, as.numeric(type),
+                 PACKAGE="igraph")
+    if (binary) {
+      res <- ifelse(res >= 1, 1, 0)
+    }
+  } else {
+    attr <- as.character(attr)
+    if (! attr %in% list.edge.attributes(graph)) {
+      stop("no such edge attribute")
+    }
+    res <- matrix(0, nr=vcount(graph), nc=vcount(graph))
+    if (is.directed(graph)) {
+      for (i in seq(length=ecount(graph))-1) {
+        e <- get.edge(graph, i)
+        res[ e[1]+1, e[2]+1 ] <- get.edge.attribute(graph, attr, i)
+      }
+    } else {
+      if (type==0) {
+        ## upper
+        for (i in seq(length=ecount(graph))-1) {
+          e <- get.edge(graph, i)
+          res[ min(e)+1, max(e)+1 ] <- get.edge.attribute(graph, attr, i)
+        }        
+      } else if (type==1) {
+        ## lower
+        for (i in seq(length=ecount(graph))-1) {
+          e <- get.edge(graph, i)
+          res[ max(e)+1, min(e)+1 ] <- get.edge.attribute(graph, attr, i)
+        }        
+      } else if (type==2) {
+        ## both
+        for (i in seq(length=ecount(graph))-1) {
+          e <- get.edge(graph, i)
+          res[ e[1]+1, e[2]+1 ] <- get.edge.attribute(graph, attr, i)
+          if (e[1] != e[2]) {
+            res[ e[2]+1, e[1]+1 ] <- get.edge.attribute(graph, attr, i)
+          }
+        }
+      }
+    }
+  }
+
+  if (names && "name" %in% list.vertex.attributes(graph)) {
+    colnames(res) <- rownames(res) <- V(graph)$name
+  }
+  
+  res
 }
 
 get.edgelist <- function(graph) {
