@@ -1,3 +1,8 @@
+2006-09-03  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/conversion.R (get.adjacency) : added 'attr', 
+	'names' and 'binary' arguments
+
 2006-08-29  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structural.properties.R (bonpow) : added, 
